PartitionRead + GetShardCount API
