# pkg/mezzanine/model_shard_count_response.go
@@ -1,0 +1,196 @@
+/*
+Mezzanine API
+
+Sharded cell-based data store
+
+API version: 1.0.0
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package mezzanine
+
+import (
+	"encoding/json"
+	"bytes"
+	"fmt"
+)
+
+// checks if the ShardCountResponse type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &ShardCountResponse{}
+
+// ShardCountResponse struct for ShardCountResponse
+type ShardCountResponse struct {
+	// A URL to the JSON Schema for this object.
+	Schema *string `json:"$schema,omitempty"`
+	// Number of configured shards
+	NumShards int64 `json:"num_shards"`
+}
+
+type _ShardCountResponse ShardCountResponse
+
+// NewShardCountResponse instantiates a new ShardCountResponse object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewShardCountResponse(numShards int64) *ShardCountResponse {
+	this := ShardCountResponse{}
+	this.NumShards = numShards
+	return &this
+}
+
+// NewShardCountResponseWithDefaults instantiates a new ShardCountResponse object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewShardCountResponseWithDefaults() *ShardCountResponse {
+	this := ShardCountResponse{}
+	return &this
+}
+
+// GetSchema returns the Schema field value if set, zero value otherwise.
+func (o *ShardCountResponse) GetSchema() string {
+	if o == nil || IsNil(o.Schema) {
+		var ret string
+		return ret
+	}
+	return *o.Schema
+}
+
+// GetSchemaOk returns a tuple with the Schema field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *ShardCountResponse) GetSchemaOk() (*string, bool) {
+	if o == nil || IsNil(o.Schema) {
+		return nil, false
+	}
+	return o.Schema, true
+}
+
+// HasSchema returns a boolean if a field has been set.
+func (o *ShardCountResponse) HasSchema() bool {
+	if o != nil && !IsNil(o.Schema) {
+		return true
+	}
+
+	return false
+}
+
+// SetSchema gets a reference to the given string and assigns it to the Schema field.
+func (o *ShardCountResponse) SetSchema(v string) {
+	o.Schema = &v
+}
+
+// GetNumShards returns the NumShards field value
+func (o *ShardCountResponse) GetNumShards() int64 {
+	if o == nil {
+		var ret int64
+		return ret
+	}
+
+	return o.NumShards
+}
+
+// GetNumShardsOk returns a tuple with the NumShards field value
+// and a boolean to check if the value has been set.
+func (o *ShardCountResponse) GetNumShardsOk() (*int64, bool) {
+	if o == nil {
+		return nil, false
+	}
+	return &o.NumShards, true
+}
+
+// SetNumShards sets field value
+func (o *ShardCountResponse) SetNumShards(v int64) {
+	o.NumShards = v
+}
+
+func (o ShardCountResponse) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o ShardCountResponse) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Schema) {
+		toSerialize["$schema"] = o.Schema
+	}
+	toSerialize["num_shards"] = o.NumShards
+	return toSerialize, nil
+}
+
+func (o *ShardCountResponse) UnmarshalJSON(data []byte) (err error) {
+	// This validates that all required properties are included in the JSON object
+	// by unmarshalling the object into a generic map with string keys and checking
+	// that every required field exists as a key in the generic map.
+	requiredProperties := []string{
+		"num_shards",
+	}
+
+	allProperties := make(map[string]interface{})
+
+	err = json.Unmarshal(data, &allProperties)
+
+	if err != nil {
+		return err;
+	}
+
+	for _, requiredProperty := range(requiredProperties) {
+		if _, exists := allProperties[requiredProperty]; !exists {
+			return fmt.Errorf("no value given for required property %v", requiredProperty)
+		}
+	}
+
+	varShardCountResponse := _ShardCountResponse{}
+
+	decoder := json.NewDecoder(bytes.NewReader(data))
+	decoder.DisallowUnknownFields()
+	err = decoder.Decode(&varShardCountResponse)
+
+	if err != nil {
+		return err
+	}
+
+	*o = ShardCountResponse(varShardCountResponse)
+
+	return err
+}
+
+type NullableShardCountResponse struct {
+	value *ShardCountResponse
+	isSet bool
+}
+
+func (v NullableShardCountResponse) Get() *ShardCountResponse {
+	return v.value
+}
+
+func (v *NullableShardCountResponse) Set(val *ShardCountResponse) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableShardCountResponse) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableShardCountResponse) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableShardCountResponse(val *ShardCountResponse) *NullableShardCountResponse {
+	return &NullableShardCountResponse{value: val, isSet: true}
+}
+
+func (v NullableShardCountResponse) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableShardCountResponse) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
